# i-fill-forms

./: .gitignore  .mcp.json  README.md  hackathon-pitch.md
.claude/: settings.local.json
backend/: .env.example  README.md  docker-compose.yml  pyproject.toml
backend/app/: database.py  main.py
backend/app/agents/: extractor.py  intelligent_extractor.py
backend/app/api/: audio.py  export.py  schemas.py  sessions.py  websocket.py
backend/app/config/: settings.py
backend/app/models/: schema.py
backend/app/optimization/: create_training_data.py  dataset_requirements.md  optimize_signatures.py
backend/app/services/: csv_handler.py  groq_transcription.py  mem0_memory.py
backend/data/: data.db
design/: README.md  design-system.md  implementation-guide.md  user-flow.md  wireframes.md
frontend/: package-lock.json
thoughts/shared/plans/: i-fill-forms-frontend-implementation.md
thoughts/shared/research/: 2025-01-08_09-46-32_webm_audio_streaming.md  2025-08-10_09-47-09_dspy_optimization_integration.md
